--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ another
 fix_store/db.sqlite3
 fix_store/repair_shop/migrations/*.py
 !fix_store/repair_shop/migrations/__init__.py
+fix_store/radio_st/migrations/*.py
+!fix_store/radio_st/migrations/__init__.py
 fix_store/fix_store_cache/*.djcache
 desktop_app/static/excel_files/sawed_xlsx/*.xlsx
