--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ fix_store/radio_st/migrations/*.py
 !fix_store/radio_st/migrations/__init__.py
 fix_store/fix_store_cache/*.djcache
 desktop_app/static/excel_files/sawed_xlsx/*.xlsx
-
+fix_store/media/excel_files/sawed_xlsx
+fix_store/media/media
